# ml_experiments

./: .beehive-gitconfig  .beehive-system-prompt.txt  .gitignore  README.md  pyproject.toml
configs/: base.yaml  example_experiment.yaml
examples/: basic_experiment.py  modal_runner_example.py
ml_experiments/: __init__.py
ml_experiments/benchmarks/: __init__.py  benchmark.py  compare.py  quantize.py
ml_experiments/core/: README_MODAL.md  __init__.py  data.py  experiment.py  metrics.py  modal_runner.py
ml_experiments/scripts/: __init__.py  benchmark.py  run_experiment.py
ml_experiments/tasks/: __init__.py  matting.py  segmentation.py  synthetic_data.py  text_encoder.py  text_to_image.py  vae.py
ml_experiments/utils/: __init__.py  hf.py  s3.py  viz.py
scripts/: README.md  benchmark.py  run_experiment.py  train_vae_imagenet.py
tests/: __init__.py  conftest.py  test_experiment.py
